# Chandra

./: Cargo.toml  README.md
chandra_kernel/: Cargo.toml
chandra_kernel/src/: function.rs  kernel.rs  lib.rs  parse_cpu_function.rs  parse_function.rs  parseatt.rs
src/: lib.rs
src/core/: allocated.rs  any_map.rs  mod.rs  operation.rs  processor_old.rs  type_traits.rs  types.rs
src/core/guards/: mod.rs  region_guard.rs
src/core/operations/: add.rs  and.rs  assign.rs  call.rs  divide.rs  equals.rs  foreach.rs  function.rs  get.rs  greater_than.rs  greater_than_or_equal.rs  if_else.rs  index.rs  instruction_list.rs  less_than.rs  less_than_or_equal.rs  mod.rs  multiply.rs  noop.rs  not_equal.rs  or.rs  range.rs  returns.rs  scope.rs  set.rs  subtract.rs  until.rs  var.rs
src/core/processor/: cpu.rs  mod.rs
src/processor/: cpu.rs  mod.rs
src/processor/gpu/: mod.rs  processor.rs
src/processor/gpu/operations/: calc.rs  compare.rs  control_flow.rs  mod.rs  structure.rs  variables.rs
src/std/: log.rs
src/types/: differential.rs  mod.rs  tensor.rs
