[package]
name = "chandra"
version = "0.1.0"
edition = "2021"
rust-version = "1.65.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandra-kernel = { path = "./chandra_kernel" }
parking_lot = "0.12.1"
rayon = "1.5.1"
rand = "0.8.4"
wgpu = { version = "0.16.1", optional = true }


[features]
default = ["gpu", "std"]
gpu = ["dep:wgpu"]
nightly = []
std = []