[package]
name = "chandra"
version = "0.0.0"
edition = "2021"
rust-version = "1.65.0"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbercatProject/Chandra"
homepage = "https://embercat.io"
description = "Will contain more information soon"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chandra-kernel = { path = "./chandra_kernel", version="0.0.0" }
parking_lot = "0.12.1"
rayon = "1.5.1"
rand = "0.8.4"
wgpu = { version = "0.16.1", optional = true }


[features]
default = ["gpu", "std"]
gpu = ["dep:wgpu"]
nightly = []
std = []