[package]
name = "chandra-kernel"
version = "0.0.0"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/EmbercatProject/Chandra"
homepage = "https://embercat.io"
description = "Will contain more information soon"

[lib]
path = "src/lib.rs"
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quote = "1.0.26"
proc-macro2 = "1.0.56"
proc-macro-error = "1.0.4"
syn = { version = "2.0.15", features = ["full", "fold", "extra-traits"] }
convert_case = "0.6"